[package]
name = "asynclog"
version = "1.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["kiven <kivensoft@gmail.com>"]
description = "A simple, asynchronous log library"
repository = "https://github.com/kivensoft/asynclog_rs"

[features]
default = ["time"]
time = ["dep:time"]
chrono = ["dep:chrono"]
tokio = ["dep:tokio"]

[dependencies]
log = "0.4"
cfg-if = "1"
fnv = "1"
crossbeam = "0.8"
parking_lot = "0.12"
time = { version = "0.3", optional = true, features = ["formatting", "local-offset"] }
chrono = { version = "0.4", optional = true, features = ["serde"] }
tokio = { version = "1", optional = true, features = ["rt", "fs", "io-std", "io-util", "sync"] }
